Add option to exclude variables from JSON export
